Feat/weapon impl (#61)
Co-authored-by: NaruseNia <notshinsin0000@gmail.com>
Co-authored-by: iam <iam4722202468@users.noreply.github.com>